# GIMPteam

./: .gitignore  EHI TU, LEGGIMI.txt  GIMPdocs.pro  README.md  collegamentoDB.cpp  collegamentoDB.h  gimpdocs.ui  gimpdocs_db.sql  gui_login.h  gui_login.ui  gui_menu.cpp  gui_menu.h  gui_menu.ui  gui_profile.cpp  gui_profile.h  main.cpp  object_script.GIMPdocs.Debug  object_script.GIMPdocs.Release  sha256.cpp  sha256.h  stub.cpp  stub.h  ui_newdoc.h  ui_ui_opendoc.h
CLIENT/: GIMPdocs.pro  GIMPdocs.pro.user.93d7dc4.22  GIMPdocs.pro.user.b4fbf25.4.10-pre1  GIMPdocs.pro.user.f0ea706  GIMPdocs.pro.user.f0ea706.22  GIMPdocs_resource.rc  Makefile  Makefile.Debug  Makefile.Release  connection_to_server.cpp  connection_to_server.h  main.cpp  object_script.GIMPdocs.Debug  object_script.GIMPdocs.Release  stub.cpp  stub.h  user.h
GUI/: classes.pri  gimpdocs.cpp  gimpdocs.h  gui_icons.h  gui_login.cpp  gui_menu.cpp  gui_menu.h  gui_newdoc.cpp  gui_newdoc.h  gui_opendoc.cpp  gui_opendoc.h  gui_profile.cpp  gui_profile.h
Server/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  dialog.cpp  dialog.h  main.cpp  server.cpp  server.h  server.pro  server.pro.user.93d7dc4.22  server.pro.user.f0ea706  server.pro.user.f0ea706.22  thread_body.cpp  thread_body.h  thread_management.cpp  thread_management.h  threaded.cpp  threaded.h
Server/database/: CMakeLists.txt  README.md  collegamentoDB.cpp  collegamentoDB.h  main.cpp  sha256.h
Server/database/FileUtili/: gimpdocs_db.sql
build-GIMPdocs-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: GIMPdocs_resource.rc  Makefile  Makefile.Debug  (+14 more)
(+140 files in other folders)
